--- a/src/assets/less/styles/custom-components/custom-component.less
+++ b/src/assets/less/styles/custom-components/custom-component.less
@@ -3,3 +3,4 @@
 @import './_color-picker.less';
 @import './_ellipsis-dropdown.less';
 @import './_icon-display.less';
+@import './_planner2D.less';
