--- a/src/assets/less/styles/custom-components/_planner2D.less
+++ b/src/assets/less/styles/custom-components/_planner2D.less
@@ -20,7 +20,7 @@
     align-items: center;
     align-content: center;
     padding: 20px;
-    max-height: 250px;
+    // max-height: 250px;
   }
 
   &__object-map {
@@ -66,6 +66,12 @@
 .occupied {
   background-color: rgb(255, 196, 0);
 }
+.point {
+  background-color: rgb(77, 255, 0);
+}
+.denied {
+  background-color: rgb(255, 0, 0);
+}
 .selected {
   border: 1px solid rgb(0, 94, 255);
 }
@@ -76,6 +82,6 @@
   &__list {
     display: flex;
     gap: 10px;
-    height: 240px;
+    // height: 240px;
   }
 }
